modified SecurityConfig.java file to access backend from localhost